tentatively works for now, need to figure why 3% error