@@ -72,7 +72,7 @@ public class KVServer
 
             DatagramSocket server = new DatagramSocket(PORT);
             /* Eliminated in single thread */
-            ExecutorService executor = Executors.newVirtualThreadPerTaskExecutor();
+            ExecutorService executor = Executors.newFixedThreadPool(8);
 
             ConcurrentMap<KeyWrapper, ValueWrapper> map
                     = ChronicleMap
